[package]
name = "fordex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-program = "1.7.9"
solana-sdk = "1.7.9"
solana-program-test = "1.7.9"
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11"
serde_derive = "1.0"
bincode = "1.3"